--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						<ul class="nav navbar-nav ">
 							<li class=" active"><a href="index.php" class="hyper "><span>Beranda</span></a></li>	
 							
-							<li><a href="contact.php" class="hyper"><span>Kontak Kami</span></a></li>
+							<li><a href="contact.html" class="hyper"><span>Kontak Kami</span></a></li>
 						</ul>
 					</div>
 					</nav>
