--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 </head>
 <body>
-<a href="index.php"><img src="images/download.png" class="img-head" alt=""></a>
+<a href="index.html"><img src="images/download.png" class="img-head" alt=""></a>
 <div class="header">
 
 		<div class="container">
 			
 			<div class="logo">
-				<h1 ><a href="index.php"><b>T<br>H<br>E</b>KHOIRUROH<span>NASA Natural Nusantara</span></a></h1>
+				<h1 ><a href="index.html"><b>T<br>H<br>E</b>KHOIRUROH<span>NASA Natural Nusantara</span></a></h1>
 			</div>
 			
 		
@@ -92,7 +92,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					</div> 
 					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 						<ul class="nav navbar-nav ">
-							<li class=" active"><a href="index.php" class="hyper "><span>Beranda</span></a></li>	
+							<li class=" active"><a href="index.html" class="hyper "><span>Beranda</span></a></li>	
 							
 							<li><a href="contact.html" class="hyper"><span>Kontak Kami</span></a></li>
 						</ul>
